Ignore images that will be used in readme

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 .Rproj.user
+
+# Ignore image files
+.jpg
+.png
